fixing contrast errors

--- a/lesson09/directory.css
+++ b/lesson09/directory.css
@@ -119,7 +119,7 @@ table tr:nth-child(odd) {
     border: none;
     border-radius: .25rem;
     font-size: 2.5rem;
-    color:#AAAAA0;
+    color:#4e4e4b;
 }
 
 #tableButton {
@@ -128,7 +128,7 @@ table tr:nth-child(odd) {
     border: none;
     border-radius: .25rem;
     font-size: 2.5rem;
-    color:#AAAAA0;
+    color:#4e4e4b;
 }
 
 /* footer */
